--- a/FAQ
+++ b/FAQ
@@ -36,8 +36,49 @@ defborder 0
 ** I want feature XYZ
 What you want is probably already in Emacs. If you don't use Emacs,
 start. If do use Emacs, use it more. If you *still* can't do what you
-want to do, you probably shouldn't do it. 
+want to do, you probably shouldn't do it.
 
 If you're stubborn enough to keep trying, patch ratpoison and post the
 patch on the mailing list. Don't forget to read the README.developers
 file.
+
+** Xinerama doesn't work well with ratpoison.
+If you have 2 monitors that have different dimensions, then problems
+can arise. You've probably noticed ratpoison disregards the dead space
+on your setup. To get around this you can use the 'frestore' command
+to fool ratpoison into avoiding the dead space.
+
+Say you have one monitor at 640x480 and another one at 1024x768. The
+smaller monitor occupies 0-639 horizontally and 0 480 vertically. the
+bigger one occupies 640-1663 horizontally and 0-768 vertically.
+
++----------+--------------+
+|	   |		  |
+|	   |		  |
+|  640x480 |   	1024x768  |
+|      	   |		  |
+|    	   |		  |
+|   	   |		  |
++----------+		  |
+|  	   |		  |
+|dead space|   		  |
++----------+--------------+
+
+In your .ratpoisonrc, add this line:
+
+frestore 0 0 0 640 480 0 0,1 640 0 1024 768 0 0
+
+Now you have 2 frames one occupying the first monitor and 1 occupying
+the second one. The problem arises when you run the command 'only'
+(bound to C-t Q), which removes all the frames and creates one big
+one. Then your nice frames will disappear. You can rebind C-t Q to the
+above command:
+
+bind Q frestore 0 0 0 640 480 0 0,1 640 0 1024 768 0 0
+
+You'll notice the only problem with this is that the frames won't have
+any windows in them. Writing a script to extract the current window
+and place it in one of the frames is an exercise left to the user.
+
+Note: I don't use Xinerama and haven't verified that this works. But
+I'm confident that it would.
